k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  serviceName: mysql-h
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql
        volumeMounts:
        - name: mysql-volume
          mountPath: /var/lib/mysql
        
  replicas: 3
  selector:
    matchLabels:
      app: mysql

  volumeClaimTemplates:
  - metadata:
      name: mysql-volume
    spec:
      accessModes: 
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
