k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-h
spec:
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
  clusterIP: None
