k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver
spec:
  selector:
    app: goserver  # Seleciona os pods com a label 'app: goserver'
  ports:
  - name: http
    protocol: TCP
    port: 80  # Porta exposta no serviço
    targetPort: 8000  # Porta para a qual o tráfego será direcionado nos pods
  type: ClusterIP  # Tipo de serviço (ClusterIP: Acessível apenas dentro do cluster ) serviço acessível externamente, NodePort ou LoadBalancer.
