k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.Kubernetes.io/force-ssl-redirect: "true"
  labels:
    name: ingress-host
spec:
  rules:
  - host: ingress.fullcycle.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: goserver
            port: 
              number: 80
  tls:
  - hosts:
    - ingress.fullcycle.com.br
    secretName: letsencrypt
